--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -2,8 +2,9 @@
 <resources>
     <string name="hello">Hello World, SimpleCalendar!</string>
     <string name="app_name">SimpleCalendarImp</string>
-    <string name="loc_radio0">Location 1</string>
-    <string name="loc_radio1">Location 2</string>
-    <string name="loc_radio2">Location 3</string>
-    <string name="loc_radio3">Location 4</string>
-</resources>
+    <string name="name">Name</string>
+    <string name="mobile">Mobile</string>
+    <string name="email">Email</string>
+    <string name="submit">Submit</string>
+    <string name="cancel">Cancel</string>
+  </resources>
